--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Easier Assignment - Building a Wireframe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="main.js"></script>
 </head>
 <body>
-    Hello
+  
+    <!--Header container class="group1"-->
+    
+   <header class="group1">Header</header>
+
+   <!--Navigation Bar class="group1"-->
+   
+   <nav class="group1">Nav</nav>
+
+    <!--Section class="group1", id="sect". This Section contains the article,h1, and p elements-->
+
+    <section class="group1" id="sect">Section
+        <article>Article
+            <h1>h1,h2,h3</h1>
+            <p>p</p>
+            </article>
+    </section>
+
+<!--Aside container class="group1" id="aside"-->
+
+<aside class="group1" id="aside">Aside</aside>
+
+<!--This div is an empty container used to clear the right floated section-->
+
+<div class=clear></div>
+
+<!--Footer container class="group1"-->
+
+<Footer class="group1">Footer</Footer>
+
 </body>
 </html>
